--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "kamilwozny/wubookapi-bundle",
   "type": "symfony-bundle",
-  "description": "Bundle helps handle wubook.net API",
+  "description": "Bundle which helps handle wubook.net API",
   "keywords": ["symfony2", "wubook", "api"],
   "homepage": "nullll", //todo cały plik do todo
   "license": "MIT",
@@ -13,7 +13,8 @@
   ],
   "require": {
     "php": ">=5.3.2",
-    "symfony/yaml": "~2.3"
+    "symfony/yaml": "~2.3",
+    "phpxmlrpc/phpxmlrpc": "4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.1",
