--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "symfony-bundle",
   "description": "Bundle which helps handle wubook.net API",
   "keywords": ["symfony2", "wubook", "api"],
-  "homepage": "nullll", //todo cały plik do todo
+  "homepage": "https://github.com/kamwoz/wubookapi-bundle",
   "license": "MIT",
   "authors": [
     {
@@ -12,12 +12,11 @@
     }
   ],
   "require": {
-    "php": ">=5.3.2",
+    "php": ">=5.4",
     "symfony/yaml": "~2.3",
     "phpxmlrpc/phpxmlrpc": "4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.1",
     "sensio/framework-extra-bundle": "~2.1|~3.0",
     "symfony/symfony": "~2.3"
   },
@@ -25,7 +24,7 @@
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
-      "Kamilwozny\\WubookAPIBundle\\": ""
+      "Kamwoz\\WubookAPIBundle\\": ""
     }
   }
 }
