wubook exception on almost every method, token refactoring, fixed client

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,9 +3,6 @@ services:
         class: Kamwoz\WubookAPIBundle\Client
         arguments:
             - @wubook_api.token_provider
-            - %wubook_api.client_username%
-            - %wubook_api.client_password%
-            - %wubook_api.provider_key%
             - %wubook_api.url%
             - %wubook_api.property_id%
         public: false
@@ -13,6 +10,10 @@ services:
         class: Kamwoz\WubookAPIBundle\Handler\BaseHandler
     wubook_api.token_handler:
         class: Kamwoz\WubookAPIBundle\Handler\TokenHandler
+        arguments:
+            - %wubook_api.client_username%
+            - %wubook_api.client_password%
+            - %wubook_api.provider_key%
         parent: "wubook_api.base_handler"
         public: true
     wubook_api.booking_handler:
