--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "require-dev": {
     "sensio/framework-extra-bundle": "~2.1|~3.0",
-    "symfony/symfony": "~2.3"
+    "symfony/symfony": ">=2.3"
   },
   "autoload": {
     "psr-4": {
