--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=5.4",
-    "symfony/yaml": "~2.3",
+    "symfony/yaml": ">=2.3",
     "phpxmlrpc/phpxmlrpc": "4.0"
   },
   "require-dev": {
